fixed overflow-x

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -31884,6 +31884,10 @@ video {
   width: 280px;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
