--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -5,3 +5,7 @@
 .shop-item {
     width: 280px;
 }
+
+body {
+    overflow-x: hidden;
+}
